--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "homepage": "https://mzipi.github.io/react_actions",
+  "homepage": "https://michellzipitria.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
